--- a/Practical7.html
+++ b/Practical7.html
@@ -43,7 +43,7 @@
             height: 50vh;
             padding: 10px;
         }
-        /* .main,.article{
+        .main,.article{
             border: 2px solid red;
             width: 50vw;
             height: 50vh;
@@ -59,71 +59,6 @@
         .articles{
             height: 30%;
             margin: 4px;
-        } */
-        .section2,
-        .section3 {
-            display: flex;
-            margin: 15px;
-            padding: 10px;
-        }
-
-        .main,
-        .article {
-            width: 50vw;
-            height: 55vh;
-            margin: 16px 16px;
-        }
-
-        .articles {
-            display: flex;
-            flex-wrap: wrap;
-            background-color: #e9470cd3;
-            flex-direction: column;
-            width: 95%;
-            height: 155px;
-            margin: 13px;
-            padding: 2px;
-            align-items: center;
-            justify-content: space-around;
-        }
-
-        .articles:first-child {
-            margin-top: 0px;
-        }
-
-        .articles:last-child {
-            height: 180px;
-        }
-
-        .main {
-            background-color: grey;
-            text-align: center;
-        }
-
-        .main h1 {
-            margin-top: 250px;
-            color: white;
-        }
-
-        .box {
-            display: flex;
-            flex-wrap: wrap;
-            float: left;
-            background-color: orangered;
-            width: 20vw;
-            height: 50vh;
-            margin: 16px 10px 14px 34px;
-        }
-
-        .section-4 {
-            display: flex;
-            background-color: rgb(170, 47, 170);
-            width: 94vw;
-            height: 12vh;
-            margin: 15px;
-            padding: 10px;
-            flex-direction: column;
-            justify-content: space-around;
         }
 
     </style>
@@ -149,27 +84,16 @@
 
       <h2 style="text-align: center; color: black;">Section-2</h2>
 
-    <!-- <div class="section-2">
+    <div class="section-2">
         <div class="main">Main Content</div>
         <div class="article">
             <div class="articles"><span class="text">Article-1</span></div>
             <div class="articles"><span class="text">Article-2</span></div>
             <div class="articles"><span class="text">Article-3</span></div>
         </div>
-    </div> -->
-    <div class="section2">
-        <div class="main">
-            <h1>Main Content</h1>
-        </div>
-        <div class="article">
-            <div class="articles"><span class="text">Article-1</span></div>
-            <div class="articles"><span class="text">Article-2</span></div>
-            <div class="articles"><span class="text">Article-3</span></div>
-        </div>
     </div>
-    
 
-    <h2 style="text-align: center;">Section-3</h2>
+    <h2 style="text-align: center; color: black;">Section-3</h2>
     <div class="section-3">
         <div class="box"></div>
         <div class="box"></div>
@@ -178,7 +102,7 @@
     </div>
     <h2 style="text-align: center;">Section-4</h2>
     <div class="section-4">
-        <span class="text" style="padding: 15px;">Footer</span>
+        <span>Footer</span>
     </div>
 
     </body>
